# rawproc

./: .gitignore  Cargo.toml  README.md
src/: color.rs  colors.rs  common.rs  debayer.rs  lib.rs  main.rs  processor.rs
src/colors/: mod.rs
src/debayer/: cfa.rs  mod.rs
src/image/: cfa.rs  component.rs  image.rs  mod.rs
