[package]
name = "easyraw"
version = "0.1.0"
authors = ["Brad Alfirevic <brad@genbyte.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
png = "0.16"
num-traits = "0.2"
libraw-rs = { path = "../libraw-rs/libraw" }